manifests/prd/headlamp/Service-headlamp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: headlamp
    app.kubernetes.io/name: headlamp
  name: headlamp
  namespace: headlamp
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: headlamp
    app.kubernetes.io/name: headlamp
  type: ClusterIP
