manifests/prd/headlamp/CiliumNetworkPolicy-headlamp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: headlamp
  namespace: headlamp
spec:
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toFQDNs:
        - matchName: auth.kidibox.net
        - matchName: registry.npmjs.org
        - matchName: artifacthub.io
        - matchName: github.com
        - matchName: objects.githubusercontent.com
        - matchName: release-assets.githubusercontent.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: headlamp
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cloudflare-tunnel-gateway-controller-proxy
            k8s:io.kubernetes.pod.namespace: cloudflare-tunnel-system
      toPorts:
        - ports:
            - port: "4466"
              protocol: TCP
